# TetrisGL

./: .gitattributes  .gitignore  README.md  makefile  meson.build  out.txt  tetris
extras/: state_container_benchmark.cpp  tetris_grid_benchmark.cpp
include/core/: color.hpp  color_t.hpp  keyboard.hpp  mino.hpp  position_t.hpp  rotation.hpp  tetrimino.hpp  tetrimino_data.hpp
include/engine/: falling_phase.hpp  frame.hpp  game.hpp  generation_phase.hpp  mino.hpp  pattern_phase.hpp  phase.hpp  tetrimino.hpp  tetrimino_generator.hpp
include/gfx/: camera.hpp  gl_context.hpp  render_window.hpp  renderer.hpp  shader.hpp  shader_program.hpp  texture.hpp
resources/images/: frame.png~
resources/shaders/: cube.fs.glsl  cube.vs.glsl  frame.fs.glsl  frame.vs.glsl
src/: main.cpp  meson.build
src/core/: tetrimino.cpp
src/engine/: falling_phase.cpp  frame.cpp  game.cpp  generation_phase.cpp  meson.build  pattern_phase.cpp  tetrimino.cpp  tetrimino_generator.cpp
src/gfx/: gl_context.cpp  meson.build  render_window.cpp  renderer.cpp  shader.cpp  shader_program.cpp  texture.cpp
subprojects/glad/: meson.build
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
